# CIC-Mission-Manager

./: .gitignore  AGENTS.md  README.md  SPECS.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/algorithms/: __init__.py  control.py  event_detection.py  guidance.py  navigation.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  reference.py  scenarios.py
backend/app/core/: __init__.py  conventions.py  enums.py
backend/app/domain/: __init__.py  constraints.py  ground_station.py  scenario.py  sensor.py  states.py  vehicle.py
backend/app/exporters/: __init__.py  cic_exporter.py  csv_exporter.py  json_exporter.py
backend/app/physics/: __init__.py  absolute_propagation.py  attitude_dynamics.py  frame_transforms.py  orbital_elements.py  quaternion.py  roe_definitions.py  roe_geometry.py  roe_propagation.py  sensors.py
backend/app/schemas/: __init__.py  scenario_schemas.py  simulation_schemas.py
backend/app/services/: __init__.py  export_manager.py  phase_manager.py  results_store.py  scenario_compiler.py  simulation_engine.py
backend/app/tests/: __init__.py
backend/app/tests/unit/: test_api_reference.py  test_domain_states.py  test_scenario_domain.py  test_two_body_propagator.py
backend/scripts/: run_dev.py
docs/: MVP_Specs.md
docs/architecture/: api_contracts.md  backend_architecture.md  frontend_architecture.md
docs/decisions/: ADR-001-roe-default-model.md  ADR-002-quaternion-convention.md
docs/physics/: absolute_orbit_models.md  (+6 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+17 files in other folders)
